{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 56,
  "lineage": "a015b3c1-da0a-a3c3-dec8-bbe52f5327fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab03-node-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d9e855d716f9c99",
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:instance/i-013f2de8f88988d77",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013f2de8f88988d77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "lab03-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0387a9f9870e5964e",
            "private_dns": "ip-10-0-1-28.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-46-137-236-20.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "46.137.236.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b9c8b7e5b578b6e9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f314a6a058f979e5",
            "tags": {
              "Name": "lab03-node-1"
            },
            "tags_all": {
              "Name": "lab03-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bba96354668dde2f"
            ]
          },
          "dependencies": [
            "aws_key_pair.lab03-keypair",
            "aws_security_group.lab03-secgroup-1",
            "aws_subnet.lab03-public-1",
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab03-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:internet-gateway/igw-0b4c857446c209aa1",
            "id": "igw-0b4c857446c209aa1",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab03-gw"
            },
            "tags_all": {
              "Name": "lab03-gw"
            },
            "vpc_id": "vpc-01ecb171bd04a12e8"
          },
          "dependencies": [
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab03-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:route-table/rtb-0e1c21e3fe2731e06",
            "id": "rtb-0e1c21e3fe2731e06",
            "owner_id": "848587260896",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4c857446c209aa1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab03-route-table"
            },
            "tags_all": {
              "Name": "lab03-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecb171bd04a12e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab03-gw",
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab03-route-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a9ed884837fc4d1",
            "route_table_id": "rtb-0e1c21e3fe2731e06",
            "subnet_id": "subnet-0f314a6a058f979e5"
          },
          "dependencies": [
            "aws_internet_gateway.lab03-gw",
            "aws_route_table.lab03-route-table",
            "aws_subnet.lab03-public-1",
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab03-route-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b115e3bd7183095d",
            "route_table_id": "rtb-0e1c21e3fe2731e06",
            "subnet_id": "subnet-036370db7375dbb57"
          },
          "dependencies": [
            "aws_internet_gateway.lab03-gw",
            "aws_route_table.lab03-route-table",
            "aws_subnet.lab03-public-2",
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab03-secgroup-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:security-group/sg-0bba96354668dde2f",
            "description": "Allow web server network traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bba96354668dde2f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "180.190.52.180/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab03-secgroup-1",
            "name_prefix": "",
            "owner_id": "848587260896",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lab03-secgroup-1"
            },
            "tags_all": {
              "Name": "lab03-secgroup-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ecb171bd04a12e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab03-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-0f314a6a058f979e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f314a6a058f979e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab03-public-1",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab03-public-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-01ecb171bd04a12e8"
          },
          "dependencies": [
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab03-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:subnet/subnet-036370db7375dbb57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036370db7375dbb57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848587260896",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab03-public-2",
              "Type": "Public"
            },
            "tags_all": {
              "Name": "lab03-public-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-01ecb171bd04a12e8"
          },
          "dependencies": [
            "aws_vpc.lab03-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab03-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:848587260896:vpc/vpc-01ecb171bd04a12e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd25a42e8db1b1dc",
            "default_route_table_id": "rtb-0bcb12008a34a7344",
            "default_security_group_id": "sg-0d4388c421f025fed",
            "dhcp_options_id": "dopt-7f272c18",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01ecb171bd04a12e8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bcb12008a34a7344",
            "owner_id": "848587260896",
            "tags": {
              "Name": "lab03-vpc"
            },
            "tags_all": {
              "Name": "lab03-vpc"
            }
          }
        }
      ]
    }
  ]
}